--- a/www/templates/diario.html
+++ b/www/templates/diario.html
@@ -1,35 +1,46 @@
-<button class="icon-text deep-purple" onclick="openPopover('popover-selecionar-refeicoes')">
-    <div><i class="icon ion-grid"></i>
-    <span id="refeicaoSelecionada"></span></div>
-</button>
-<div class="popover" id="popover-selecionar-refeicoes"></div>
+<div class="options-menu row-between">
+    <div class="col-20" onclick="openPopover('popover-selecionar-refeicoes')">
+        <button class="icon-text deep-purple">
+            <div><i id="iconRefeicaoSelecionada" class="icon"></i>
+            <span id="refeicaoSelecionada"></span></div>
+        </button>
+    </div>
 
-<button class="icon-text deep-purple right">
+    <div class="col-20">
+        <button class="icon-text deep-purple right">
         <i class="icon ion-calendar"></i>
         <span id="data">Segunda</span>
-    </button>
-
-
-<button class="float-bottom-right indigo circle icon ion-plus">
-        
-</button>
-
-<script id="templateSelecionarRefeicao" type="text/x-jsrender">
-    {{for refeicoes}}
-    <div class="item" onclick="selecionarRefeicao('{{:nome}}')">
-        <i class="icon {{:icon}}"></i>
-        <div style="display: inline-block; line-height: 32px">{{:nome}}</div>
+        </button>
     </div>
-    {{/for}}
-</script>
+
+    <div class="col-20">
+        <button class="icon-text deep-purple right">
+            <i class="icon ion-clock"></i>
+            <span id="data">Segunda</span>
+        </button>
+    </div>
+</div>
+
+<button class="float-bottom-right indigo circle icon ion-plus"></button>
+<div class="popover" id="popover-selecionar-refeicoes">
+    <div class="list">
+        {{for refeicoes}}
+        <div class="item" onclick="selecionarRefeicao('{{:nome}}', '{{:icon}}')">
+            <i class="icon {{:icon}}"></i>
+            <div style="display: inline-block; line-height: 32px">{{:nome}}</div>
+        </div>
+        {{/for}}
+    </div>
+</div>
 
 <script type=" text/javascript ">
-    function selecionarRefeicao(refeicao) {
+    function selecionarRefeicao(refeicao, icon) {
+        $("#iconRefeicaoSelecionada").removeClass();
+        $("#iconRefeicaoSelecionada").addClass("icon " + icon);
         $("#refeicaoSelecionada ").html(refeicao);
     }
 
-    selecionarRefeicao(Refeicao.forNow().nome);
-    carregarTemplate("#templateSelecionarRefeicao", "#popover-selecionar-refeicoes", {
-        refeicoes: getTodasRefeicoes()
-    });
+    var refeicao = Refeicao.forNow();
+
+    selecionarRefeicao(refeicao.nome, refeicao.icon);
 </script>
